# filtro-backend

./: main.py  pyproject.toml
app/filtros/: filtros.py
app/modelo/: modelo.py
